--- a/assets/sass/add.scss
+++ b/assets/sass/add.scss
@@ -337,7 +337,6 @@
   }
 }
 
-
 .form_wrapper {
   width: 100%;
   padding: 50px;
@@ -347,19 +346,24 @@
 .form_table {
   width: 100%;
   table-layout: fixed;
-  input, textarea {
+  input,
+  textarea {
     width: 100%;
     background: #fff;
     font-size: 16px;
     line-height: 1.4;
     padding: 15px;
   }
-th {
-  width: 20%; 
-}
-th,td{
-  padding: 20px;
-}
+  th {
+    width: 20%;
+  }
+  th,
+  td {
+    padding: 20px;
+  }
+  th {
+    padding-right: 0;
+  }
 }
 
 .add_participant_btn {
@@ -386,10 +390,13 @@ th,td{
     margin-bottom: 0;
   }
   input {
-    margin-bottom:  1rem;
+    margin-bottom: 1rem;
   }
   &.hide {
     display: none;
+  }
+  &.show {
+    display: block;
   }
 }
 
@@ -405,7 +412,6 @@ p.participant_number {
     content: "＋";
     display: inline-block;
     margin-right: 0.2em;
- 
   }
   font-size: 14px;
   background: #666;
@@ -416,5 +422,69 @@ p.participant_number {
     &::before {
       content: "－";
     }
+  }
+}
+
+.add_participant_btn_wrapper {
+  margin-top: -2rem;
+}
+//
+// tool
+.ta_center_table {
+  display: table;
+  margin: {
+    left: auto;
+    right: auto;
+  }
+}
+//
+//
+.container {
+  &--mail {
+    padding: 3rem 0;
+  }
+}
+//
+//
+.form_ttl {
+  font-weight: 700;
+  font-size: 1.5em;
+}
+//
+//form_table
+.form_table_confirm {
+  border: 1px solid #ccc;
+  max-width: 780px;
+  margin: {
+    left: auto;
+    right: auto;
+  };
+  th,
+  td {
+    border: 1px solid #ccc;
+    padding: 0.8rem;
+    text-align: left;
+  }
+  th {
+    background: #eee;
+  
+  }
+}
+//
+//
+.btn_wrap {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+.form_btn {
+  width: 200px;
+}
+//
+//
+.base_btn {
+  &--gray {
+    background: #333;
+    color: #fff;
   }
 }
