--- a/assets/css/add.css
+++ b/assets/css/add.css
@@ -322,31 +322,87 @@
 
 .form_wrapper {
   width: 100%;
-  padding: 50px;
-  background: #f5f5f5;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.form_wrapper--back {
+  background: rgba(242, 242, 242, 0.6039215686);
+  padding: 30px 30px 50px 30px;
+  max-width: unset;
 }
 
 .form_table {
   width: 100%;
   table-layout: fixed;
+  margin-bottom: 2rem;
+  border-top: 1px solid #ededed;
+}
+.form_table--nbt {
+  border-top: none;
 }
 .form_table input,
-.form_table textarea {
+.form_table textarea, .form_table select {
   width: 100%;
+  border: 1px solid #666 !important;
   background: #fff;
   font-size: 16px;
   line-height: 1.4;
-  padding: 15px;
+  padding: 10px;
 }
 .form_table th {
   width: 20%;
+  line-height: 1.7;
+}
+.form_table th small {
+  font-weight: 500;
+  display: inline-block;
+  line-height: 1.5;
 }
 .form_table th,
 .form_table td {
-  padding: 20px;
+  padding: 25px 20px 25px 20px;
+  border-bottom: 1px solid #ededed;
+}
+.form_table th.nb,
+.form_table td.nb {
+  border-bottom: none;
 }
 .form_table th {
   padding-right: 0;
+}
+
+.form_label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  margin-bottom: 0;
+}
+
+.form_section_ttl {
+  font-weight: 700;
+  font-size: 1.1em;
+}
+
+.require {
+  display: inline-block;
+  color: #fff;
+  background: #ff0000;
+  padding: 0.2em 0.5em;
+  font-size: 10px;
+  margin-left: 0.5em;
+  position: relative;
+  margin-top: 0.2em;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  vertical-align: middle;
 }
 
 .add_participant_btn.disabled {
@@ -366,6 +422,7 @@
 
 .participant_input {
   margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 .participant_input p {
   margin-bottom: 0;
@@ -380,11 +437,20 @@
   display: block;
 }
 
-p.participant_number {
+.participant_number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem !important;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+.participant_number__ttl {
   font-weight: 500;
   border-bottom: 1px solid #000;
-  display: table;
-  margin-bottom: 1rem;
+  display: inline-block;
+  font-weight: 700;
 }
 
 .add_participant_btn {
@@ -407,10 +473,26 @@ p.participant_number {
   margin-top: -2rem;
 }
 
+textarea.textarea_event_title {
+  border: none !important;
+}
+
+.ta_center {
+  text-align: center;
+}
+
 .ta_center_table {
   display: table;
   margin-left: auto;
   margin-right: auto;
+}
+
+.fs_24 {
+  font-size: 24px;
+}
+
+.td_underline {
+  text-decoration: underline;
 }
 
 .container--mail {
@@ -436,6 +518,7 @@ p.participant_number {
 }
 .form_table_confirm th {
   background: #eee;
+  width: 27%;
 }
 
 .btn_wrap {
@@ -455,4 +538,35 @@ p.participant_number {
 .base_btn--gray {
   background: #333;
   color: #fff;
+}
+
+#login_form {
+  width: 500px;
+  margin: 25px auto;
+  border: 1px solid #ccc;
+  font-weight: normal;
+  padding: 30px;
+  color: #000;
+  line-height: 1.3;
+  font-size: 90%;
+}
+#login_form input {
+  font-size: 16px;
+  padding: 12px;
+}
+
+form .input {
+  font-size: 20px;
+  margin: 2px 6px 10px 0;
+  padding: 3px;
+  width: 97%;
+}
+
+input[type=text],
+input[type=password],
+input[type=file],
+input[type=button],
+input[type=reset] {
+  background-color: #ffffff;
+  border: 1px solid #999;
 }
