--- a/assets/sass/add.scss
+++ b/assets/sass/add.scss
@@ -339,33 +339,80 @@
 
 .form_wrapper {
   width: 100%;
-  padding: 50px;
-  background: #f5f5f5;
+  max-width: 800px;
+  margin: {
+    left: auto;
+    right: auto;
+  }
+  &--back {
+    background: #f2f2f29a;
+    padding: 30px 30px 50px 30px;
+    max-width: unset;
+  }
 }
 
 .form_table {
   width: 100%;
   table-layout: fixed;
+  margin-bottom: 2rem;
+  border-top: 1px solid #ededed;
+  &--nbt {
+    border-top: none;
+  }
   input,
-  textarea {
+  textarea,select {
     width: 100%;
+    border: 1px solid #666 !important;
     background: #fff;
     font-size: 16px;
     line-height: 1.4;
-    padding: 15px;
+    padding: 10px;
   }
   th {
     width: 20%;
+    line-height: 1.7;
+    small {
+      font-weight: 500;
+      display: inline-block;
+      line-height: 1.5;
+    }
   }
   th,
   td {
-    padding: 20px;
+    padding: 25px 20px 25px 20px;
+    border-bottom: 1px solid #ededed;
+    &.nb {
+      border-bottom: none;
+    }
   }
   th {
     padding-right: 0;
   }
 }
-
+.form_label {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  margin-bottom: 0;
+}
+.form_section_ttl {
+  font-weight: 700;
+  font-size: 1.1em;
+}
+.require {
+  display: inline-block;
+  color: #fff;
+  background: #ff0000;
+  padding: 0.2em 0.5em;
+  font-size: 10px;
+  margin-left: 0.5em;
+  position: relative;
+  margin-top: 0.2em;
+  flex: 0 0 auto;
+  vertical-align: middle;
+}
+//
+// event
 .add_participant_btn {
   &.disabled {
     opacity: 0.5;
@@ -386,6 +433,7 @@
 
 .participant_input {
   margin-bottom: 2rem;
+  margin-top: 1rem;
   p {
     margin-bottom: 0;
   }
@@ -400,11 +448,16 @@
   }
 }
 
-p.participant_number {
-  font-weight: 500;
-  border-bottom: 1px solid #000;
-  display: table;
-  margin-bottom: 1rem;
+.participant_number {
+  display: flex;
+  margin-bottom: 1rem !important;
+  align-items: start;
+  &__ttl {
+    font-weight: 500;
+    border-bottom: 1px solid #000;
+    display: inline-block;
+    font-weight: 700;
+  }
 }
 
 .add_participant_btn {
@@ -428,14 +481,26 @@ p.participant_number {
 .add_participant_btn_wrapper {
   margin-top: -2rem;
 }
+textarea.textarea_event_title {
+  border: none !important;
+}
 //
 // tool
+.ta_center {
+  text-align: center;
+}
 .ta_center_table {
   display: table;
   margin: {
     left: auto;
     right: auto;
   }
+}
+.fs_24 {
+  font-size: 24px;
+}
+.td_underline {
+  text-decoration: underline;
 }
 //
 //
@@ -458,7 +523,7 @@ p.participant_number {
   margin: {
     left: auto;
     right: auto;
-  };
+  }
   th,
   td {
     border: 1px solid #ccc;
@@ -467,7 +532,7 @@ p.participant_number {
   }
   th {
     background: #eee;
-  
+    width: 27%;
   }
 }
 //
@@ -487,4 +552,36 @@ p.participant_number {
     background: #333;
     color: #fff;
   }
+}
+//
+//
+#login_form {
+  width: 500px;
+  margin: 25px auto;
+  border: 1px solid #ccc;
+  font-weight: normal;
+  padding: 30px;
+  color: #000;
+  line-height: 1.3;
+  font-size: 90%;
+  input {
+    font-size: 16px;
+    padding: 12px;
+  }
+}
+
+form .input {
+  font-size: 20px;
+  margin: 2px 6px 10px 0;
+  padding: 3px;
+  width: 97%;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="file"],
+input[type="button"],
+input[type="reset"] {
+  background-color: #ffffff;
+  border: 1px solid #999;
 }
