--- a/assets/css/add.css
+++ b/assets/css/add.css
@@ -570,3 +570,15 @@ input[type=reset] {
   background-color: #ffffff;
   border: 1px solid #999;
 }
+
+.thanks_text__event_name {
+  font-size: 1.2em;
+  font-weight: 700;
+}
+
+.thanks_text__head {
+  margin-bottom: 2rem;
+}
+.thanks_text__head p {
+  margin-bottom: 0;
+}
