--- a/assets/css/add.css
+++ b/assets/css/add.css
@@ -331,8 +331,14 @@
   padding: 30px 30px 50px 30px;
   max-width: unset;
 }
+@media screen and (max-width: 600px) {
+  .form_wrapper {
+    padding: 20px 10px 50px 10px;
+  }
+}
 
 .form_table {
+  white-space: unset !important;
   width: 100%;
   table-layout: fixed;
   margin-bottom: 2rem;
@@ -342,7 +348,8 @@
   border-top: none;
 }
 .form_table input,
-.form_table textarea, .form_table select {
+.form_table textarea,
+.form_table select {
   width: 100%;
   border: 1px solid #666 !important;
   background: #fff;
@@ -371,6 +378,20 @@
 .form_table th {
   padding-right: 0;
 }
+@media screen and (max-width: 600px) {
+  .form_table th,
+  .form_table td {
+    display: block;
+    padding: 10px 0;
+  }
+  .form_table th {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
+  .form_table td {
+    padding-top: 0;
+  }
+}
 
 .form_label {
   display: -webkit-box;
@@ -383,11 +404,17 @@
       -ms-flex-align: start;
           align-items: start;
   margin-bottom: 0;
+  padding-top: 0.55em;
 }
 .form_label--mini {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+}
+@media screen and (max-width: 600px) {
+  .form_label--mini {
+    margin-bottom: 0.5rem !important;
+  }
 }
 
 .form_section_ttl {
@@ -543,6 +570,12 @@ textarea.textarea_event_title {
 .form_btn {
   width: 200px;
 }
+@media screen and (max-width: 600px) {
+  .form_btn {
+    width: 100%;
+    padding: 20px 10px;
+  }
+}
 
 .base_btn--gray {
   background: #333;
@@ -594,4 +627,16 @@ input[type=reset] {
 
 .hide_row {
   display: none;
+}
+
+.confirm_table {
+  margin-bottom: 3rem;
+}
+.confirm_table .require,
+.confirm_table small {
+  display: none !important;
+}
+.confirm_table .form_label {
+  padding-top: 0;
+  margin-bottom: 0;
 }
