--- a/assets/css/add.css
+++ b/assets/css/add.css
@@ -347,7 +347,7 @@
 .form_table--nbt {
   border-top: none;
 }
-.form_table input,
+.form_table input:not([type=radio]),
 .form_table textarea,
 .form_table select {
   width: 100%;
@@ -358,7 +358,7 @@
   padding: 10px;
 }
 .form_table th {
-  width: 20%;
+  width: 12em;
   line-height: 1.7;
 }
 .form_table th small {
@@ -406,6 +406,7 @@
           align-items: start;
   margin-bottom: 0;
   padding-top: 0.55em;
+  margin-bottom: 0.3em;
 }
 .form_label--mini {
   -webkit-box-pack: start;
@@ -473,10 +474,6 @@
   border: none;
 }
 
-.participant_input {
-  margin-bottom: 2rem;
-  margin-top: 1rem;
-}
 .participant_input p {
   margin-bottom: 0;
 }
@@ -578,7 +575,8 @@ textarea.textarea_event_title {
   width: 27%;
 }
 @media screen and (max-width: 600px) {
-  .form_table_confirm th, .form_table_confirm td {
+  .form_table_confirm th,
+  .form_table_confirm td {
     width: 100%;
     display: block;
     border: none;
@@ -643,6 +641,31 @@ input[type=button],
 input[type=reset] {
   background-color: #ffffff;
   border: 1px solid #999;
+}
+
+.form_reasons__label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.form_reasons__radio {
+  display: inline-block;
+  margin-right: 0.5em;
+  width: 10px;
+}
+
+.sub_form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+}
+.sub_form label {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
 }
 
 .thanks_text__event_name {
