--- a/assets/css/add.css
+++ b/assets/css/add.css
@@ -1,4 +1,13 @@
 @charset "UTF-8";
+input[type=submit] {
+  cursor: pointer;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+}
+input[type=submit]:hover {
+  opacity: 0.7;
+}
+
 .mv_btns {
   display: grid;
   gap: 15px;
